# rsomics-vcf-trio-stats

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  lib.rs  main.rs  ped.rs  triostats.rs  vcf.rs
tests/: compat.rs  smoke.rs
tests/golden/: trio.ped  trio.vcf  trio_chrx.ped  trio_chrx.vcf
