[package]
name = "rsomics-vcf-trio-stats"
version = "0.1.1"
description = "Per-trio VCF transmission and de-novo statistics — valid/non-ref GTs, Mendelian errors, novel/untransmitted/transmitted singletons, Ts/Tv, hom and recurrent DNMs — value-exact with bcftools +trio-stats"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-vcf-trio-stats"
authors = ["Zane Leong <efd@live.com>"]
readme = "README.md"

[[bin]]
name = "rsomics-vcf-trio-stats"
path = "src/main.rs"

[lib]
name = "rsomics_vcf_trio_stats"
path = "src/lib.rs"
doctest = false

[[bench]]
name = "bench"
harness = false

[dependencies]
rsomics-common = { version = "0.6" }
clap = { version = "4", features = ["derive"] }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"
